// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`jestConfigObject export default should handle spread assignments 1`] = `
"{
          ...nxPreset,
          abc: 'xyz'
        }"
`;

exports[`jestConfigObject export default should work for basic cases 1`] = `
"{
          abc: 'xyz'
        }"
`;
